Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11200

Redundant additions to ExecOption field in query profile of grouping aggregator node when inside a subplan

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.1.0
    • None
    • None
    • ghx-label-10

    Description

      There is an excessive addition of "Codegen Enabled" text to "ExecOption" field in the query profile when a grouping agg is a part of a subplan that is created to unnest a complex type.
      I was able to reproduce this using one of the queries we used for end to end testing:

      use tpch_nested_parquet;
      select c_custkey, v.* from customer c,
        (select o_orderpriority, count(o_orderkey) c, sum(o_totalprice) s,
                avg(o_totalprice) a, max(o_orderstatus) mx,
                min(o_orderdate) mn
         from c.c_orders
         group by o_orderpriority) v
      where c_custkey < 4;
      

      From the query profile:

           AGGREGATION_NODE (id=4):
                   - InactiveTotalTime: 0.000ns
                   - PeakMemoryUsage: 36.04 MB (37794944)
                   - RowsReturned: 0 (0)
                   - RowsReturnedRate: 0
                   - TotalTime: 1.571ms
                  GroupingAggregator 0:
                    ExecOption: Codegen Enabled, Codegen Enabled, Codegen Enabled       <== THIS PART!
                     - BuildTime: 68.253us
                     - GetResultsTime: 72.634us
      

      The reason this happens is because "Codegen Enabled" is added to the ExecOption everytime the agg node is Opened as a result of the subplan being called again and again to unnest.

      Attachments

        Issue Links

          Activity

            People

              csringhofer Csaba Ringhofer
              bikramjeet.vig Bikramjeet Vig
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: